# nutty-bread

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  entry.py  main.py  pyproject.toml
custom/: data_loader.py  model.py  train.py  transformer_block.py
custom/blocks/: activation_blocks.py  attention_blocks.py  energy_function_blocks.py  lwta_blocks.py  mcmc_sampler.py
custom/commons/: feature_extractor.py  focal_loss.py  logger.py  replay_buffer.py  utils.py
custom/layers/: dual_attention_layer.py
custom/models/benchmarking/: tab_pfn.py
custom/models/saddle/: data_processing.py  saddle_model.py  trainer.py
custom/models/saint_transformer/: VMapEnsembleTrainer.py  config.py  data_processing.py  saint_transformer.py  train.py  train_lightning.py  trainer.py
custom/models/tab_pfn/: train.py
data_synthesis/: synthesis_prep.py
datasets/: sample_horses_v2.csv
datasets/schemas/: sample_horses_schema.py  sample_training.yaml
generator/: train_tab_ddp.py
learn_modules/: attention_network.py  deep_network.py  position_aware_network.py  self_attention_network.py  sequence_network.py
src/commons/: feature_extractor.py  logger.py  memory_bakery.py
src/data/: collate.py  encode.py  ingest.py  metadata.py  split.py
src/data/config/: feature_map.py  model_features.yaml
src/data/encode/: __init__.py  artifacts.py  categorical.py  continuous.py  feature_types.py  pipeline.py
src/data/features/: enrich.py  lags.py  targets.py
src/data/pipeline/: preprocess.py
src/eval/: metrics.py
src/layers/: dual_attention_layer.py
src/models/benchmarking/: tab_pfn.py
src/models/saddle/: config.py  data_processing.py  saddle_dataset.py  saddle_model.py  trainer.py
src/modules/: __init__.py  activation.py  attention_pooling.py  batched_embedding.py
src/modules/ebt/: __init__.py  energy_function.py  energy_optimizer.py  mcmc_sampler.py
