[project]
name = "neural-learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "lightning>=2.5.2",
    "modal>=1.0.5",
    "neptune>=1.14.0",
    "polars>=1.31.0",
    "prodigy-plus-schedule-free==2.0.0rc2",
    "prodigyopt>=1.1.2",
    "pyarrow>=21.0.0",
    "pytorch-tabular>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "tabpfn",
    "torch>=2.7.1",
]

[tool.uv.sources]
tabpfn = { git = "https://github.com/PriorLabs/TabPFN.git", rev = "main" }
