[project]
name = "neural-learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.2",
    "neptune>=1.14.0",
    "polars>=1.31.0",
    "prodigy-plus-schedule-free==2.0.0rc2",
    "prodigyopt>=1.1.2",
    "pyarrow>=21.0.0",
    "pytorch-tabular",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "tabpfn",
    "torch>=2.7.1",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
tabpfn = { git = "https://github.com/PriorLabs/TabPFN.git", rev = "main" }
pytorch-tabular = { git = "https://github.com/manujosephv/pytorch_tabular.git", rev = "main" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "modal>=1.1.0",
]
