[project]
name = "neural-learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "polars",
    "pytorch-tabular",
    "tabpfn",
    "neptune",
    "pyarrow",
    "requests",
    "prodigy-plus-schedule-free",
    "pytorch-triton; sys_platform == 'linux'"
]

[tool.uv.sources]
torch = [{index = "pytorch-nightly-cu128", marker = "sys_platform == 'linux'"}]
pytorch-triton = [{index = "pytorch-nightly-cu128", marker = "sys_platform == 'linux'"}]
tabpfn = { git = "https://github.com/PriorLabs/TabPFN.git", rev = "main" }
pytorch-tabular = { git = "https://github.com/manujosephv/pytorch_tabular.git", rev = "main" }
prodigy-plus-schedule-free = { git = "https://github.com/LoganBooker/prodigy-plus-schedule-free.git", rev = "main" }

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "modal>=1.1.0",
]

[tool.uv]
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux'",
]
